# Fermity

./: CMakeLists.txt  README.md  ab.sh  base.html  response_template_content.txt  response_template_head.txt  tools.sh
.github/workflows/: cleanup_actions.yml  test_server.yml
assets/: ic.eot
css/: ic.css
data/: last-update.txt
html/: base_page1.txt  base_page2.txt  base_page3.txt
main/include/: log.h  util.h
main/src/: main.c  util.c
mains_src/: aboutme.phtml  account.phtml  content.phtml  home.phtml  preferences.phtml  updates.phtml
pack/: rtc.t0  rth.t0
ssl-certs/: cert_gen.sh  crt-req.csr  crt.pem  key.pem
test/src/: main.c  util_test.c
tools/src/: main.c
